--- a/.github/workflows/code-quality.yaml
+++ b/.github/workflows/code-quality.yaml
@@ -1,5 +1,8 @@
 name: Python Code Quality
-on: [push]
+on:
+  push:
+    tags-ignore:
+      - "**"
 jobs:
   lock_file:
     runs-on: ubuntu-latest
