--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -171,6 +171,10 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: pyproject-toml
+      - name: Switch to main branch
+        run: |
+          git fetch origin main
+          git checkout main
       - name: Commit updated version
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
