--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "python-ecd"
 version = "0.1.3"
-description = "Add your description here"
+description = "Python CLI for Everybody Codes"
 readme = "README.md"
 authors = [{ name = "Pablo Garcia", email = "pablofueros@gmail.com" }]
 requires-python = ">=3.13"
@@ -16,6 +16,4 @@ requires = ["uv_build>=0.9.7,<0.10.0"]
 build-backend = "uv_build"
 
 [dependency-groups]
-dev = [
-    "ty>=0.0.1a25",
-]
+dev = ["ty>=0.0.1a25"]
