--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,10 @@ name = "python-ecd"
 version = "0.1.4"
 description = "Python CLI for Everybody Codes"
 readme = "README.md"
+classifiers = [
+    "Programming Language :: Python :: 3.13",
+    "License :: OSI Approved :: MIT License",
+]
 authors = [{ name = "Pablo Garcia", email = "pablofueros@gmail.com" }]
 requires-python = ">=3.13"
 dependencies = ["everybody-codes-data==0.2", "typer>=0.20.0"]
