--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -196,12 +196,17 @@ jobs:
           mv project-metadata/uv.lock uv.lock
           echo "✅ Files moved successfully."
           ls -l
+      - name: Debug file changes
+        run: |
+          git status
+          echo "------"
+          git diff --stat
       - name: Switch to main branch
         run: |
           git fetch origin main
           git checkout main
       - name: Commit updated version
-        uses: stefanzweifel/git-auto-commit-action@v5
+        uses: stefanzweifel/git-auto-commit-action@v7
         with:
           commit_message: "chore: bump version to ${{ needs.details.outputs.new_version }}"
           file_pattern: |
