--- a/.github/workflows/code-quality.yaml
+++ b/.github/workflows/code-quality.yaml
@@ -3,9 +3,12 @@ on:
   push:
     branches:
       - "**"
-    tags-ignore:
-      - "**"
-  workflow_call:
+    tags:
+      - "*"
+  workflow_run:
+    workflows: ["Release"]
+    types:
+      - completed
     
 jobs:
   lock_file:
